# dsfsdgsdgsdgsdgsd

./: .gitignore  build.sh  build_linux_packages.sh  build_win_container.sh  deploy_win.py
.github/workflows/: build-android.yml  build-ios.yml  build-macos.yml  test-linux.yml
client/: CMakeLists.txt  Info.plist  LoginScreen.qml  MainScreen.qml  TrackRow.qml  UploadDialog.qml  android_helper.cpp  android_helper.h  audioplayer.cpp  audioplayer.h  ios_helper.h  ios_helper.mm  main.cpp  main.qml  networkmanager.cpp  networkmanager.h  tortu.desktop
client/android-sources/: AndroidManifest.xml
client/android-sources/src/cyou/tortu/client/: MediaService.java
server/: auth.php  db.php  favorites.php  playlists.php  tracks.php  upload.php
website/: disclaimer.php  dmca.php  index.php  lang.php  privacy.php  style.css  tg.php
